Proper config. variables

--- a/web/config
+++ b/web/config
@@ -1,40 +1,74 @@
-SERIAL_SIZE_CREDENTIAL=12
-SERIAL_SIZE_PROFILE_POST=12
-SERIAL_SIZE_TIMELINE_POST=12
-SERIAL_SIZE_RELATION=12
+#
+# Number of files for each type of data
+#
+FILE_COUNT_CREDENTIAL=2
+FILE_COUNT_RELATION=5
+FILE_COUNT_TIMELINE_POST=10
+FILE_COUNT_PROFILE_POST=10
 
-SERIAL_BOUNDS_CREDENTIAL_ACTIVE_START=12
-SERIAL_BOUNDS_CREDENTIAL_ACTIVE_END=12
-SERIAL_BOUNDS_CREDENTIAL_USERNAME_START=12
-SERIAL_BOUNDS_CREDENTIAL_USERNAME_END=12
-SERIAL_BOUNDS_CREDENTIAL_PASSWORD_START=12
-SERIAL_BOUNDS_CREDENTIAL_PASSWORD_END=12
+#
+# Field sizes in serialized strings
+#
+FIELD_SIZE_USERNAME=20
+FIELD_SIZE_PASSWORD=20
+FIELD_SIZE_TEXT=100
+FIELD_SIZE_TIMESTAMP=10
+FIELD_SIZE_ACTIVE=1
+FIELD_SIZE_DIRECTION=1
 
-SERIAL_BOUNDS_RELATION_ACTIVE_START=12
-SERIAL_BOUNDS_RELATION_ACTIVE_END=12
-SERIAL_BOUNDS_RELATION_FIRST_USERNAME_START=12
-SERIAL_BOUNDS_RELATION_FIRST_USERNAME_END=12
-SERIAL_BOUNDS_RELATION_DIRECTION_START=12
-SERIAL_BOUNDS_RELATION_DIRECTION_END=12
-SERIAL_BOUNDS_RELATION_SECOND_USERNAME_START=12
-SERIAL_BOUNDS_RELATION_SECOND_USERNAME_END=12
+#
+# Number of characters for each type of serialized field
+# (see the bounds below to see what they're composed of)
+#
+SERIAL_SIZE_CREDENTIAL=41
+SERIAL_SIZE_PROFILE_POST=131
+SERIAL_SIZE_TIMELINE_POST=151
+SERIAL_SIZE_RELATION=42
 
-SERIAL_BOUNDS_PROFILE_POST_ACTIVE_START=12
-SERIAL_BOUNDS_PROFILE_POST_ACTIVE_END=12
-SERIAL_BOUNDS_PROFILE_POST_USERNAME_START=12
-SERIAL_BOUNDS_PROFILE_POST_USERNAME_END=12
-SERIAL_BOUNDS_PROFILE_POST_TIMESTAMP_START=12
-SERIAL_BOUNDS_PROFILE_POST_TIMESTAMP_END=12
-SERIAL_BOUNDS_PROFILE_POST_TEXT_START=12
-SERIAL_BOUNDS_PROFILE_POST_TEXT_END=12
+#
+# Start and end points denoting different fields in a serialized CREDENTIAL
+#
+SERIAL_CREDENTIAL_ACTIVE_START=0
+SERIAL_CREDENTIAL_ACTIVE_END=1
+SERIAL_CREDENTIAL_USERNAME_START=1
+SERIAL_CREDENTIAL_USERNAME_END=21
+SERIAL_CREDENTIAL_PASSWORD_START=21
+SERIAL_CREDENTIAL_PASSWORD_END=41
 
-SERIAL_BOUNDS_PROFILE_POST_ACTIVE_START=11
-SERIAL_BOUNDS_PROFILE_POST_ACTIVE_END=11
-SERIAL_BOUNDS_PROFILE_POST_USERNAME_START=21
-SERIAL_BOUNDS_PROFILE_POST_USERNAME_END=21
-SERIAL_BOUNDS_PROFILE_POST_AUTHOR_START=121
-SERIAL_BOUNDS_PROFILE_POST_AUTHOR_END=121
-SERIAL_BOUNDS_PROFILE_POST_TIMESTAMP_START=2
-SERIAL_BOUNDS_PROFILE_POST_TIMESTAMP_END=2
-SERIAL_BOUNDS_PROFILE_POST_TEXT_START=21
-SERIAL_BOUNDS_PROFILE_POST_TEXT_END=21
+#
+# Start and end points denoting different fields in a serialized RELATION
+#
+SERIAL_RELATION_ACTIVE_START=0
+SERIAL_RELATION_ACTIVE_END=1
+SERIAL_RELATION_FIRST_USERNAME_START=1
+SERIAL_RELATION_FIRST_USERNAME_END=21
+SERIAL_RELATION_DIRECTION_START=21
+SERIAL_RELATION_DIRECTION_END=22
+SERIAL_RELATION_SECOND_USERNAME_START=22
+SERIAL_RELATION_SECOND_USERNAME_END=42
+
+#
+# Start and end points denoting different fields in a serialized PROFILE POST
+#
+SERIAL_PROFILE_POST_ACTIVE_START=0
+SERIAL_PROFILE_POST_ACTIVE_END=1
+SERIAL_PROFILE_POST_USERNAME_START=1
+SERIAL_PROFILE_POST_USERNAME_END=21
+SERIAL_PROFILE_POST_TIMESTAMP_START=21
+SERIAL_PROFILE_POST_TIMESTAMP_END=31
+SERIAL_PROFILE_POST_TEXT_START=31
+SERIAL_PROFILE_POST_TEXT_END=131
+
+#
+# Start and end points denoting different fields in a serialized TIMELINE POST
+#
+SERIAL_TIMELINE_POST_ACTIVE_START=0
+SERIAL_TIMELINE_POST_ACTIVE_END=1
+SERIAL_TIMELINE_POST_USERNAME_START=1
+SERIAL_TIMELINE_POST_USERNAME_END=21
+SERIAL_TIMELINE_POST_AUTHOR_START=21
+SERIAL_TIMELINE_POST_AUTHOR_END=41
+SERIAL_TIMELINE_POST_TIMESTAMP_START=41
+SERIAL_TIMELINE_POST_TIMESTAMP_END=51
+SERIAL_TIMELINE_POST_TEXT_START=51
+SERIAL_TIMELINE_POST_TEXT_END=151
