Need to include -pthread for Ubuntu

--- a/storage/Makefile
+++ b/storage/Makefile
@@ -13,7 +13,7 @@ SRCEXT := cpp
 SOURCES := $(shell find $(SRCDIR) -type f -name *.$(SRCEXT))
 OBJECTS := $(patsubst $(SRCDIR)/%,$(BUILDDIR)/%,$(SOURCES:.$(SRCEXT)=.o))
 CFLAGS := -g -Wall
-LIB := #-pthread
+LIB := -pthread
 INC := -I include
 
 $(TARGET): $(OBJECTS)
